frontend/public/app.css
/* ... */
section#landing h1 {
  font-size: 25px;
}
section {
  background: #fafafa;
  box-shadow: 5px 5px 20px 2px rgba(0,0,0,0.03);
  float: right;
  margin: 0 0 24px 0;
  padding: 36px;
  width: 100%;
}
section h2 {
  color: #7d7d7d;
  font-size: 21px;
  line-height: 32px;
  margin-bottom: 50px;
}
section small {
  color: #aaa;
  display: block;
  margin-top: 30px;
  padding-right: 20px;
  text-align: right;
  width: 100%;
}
section small a {
  color: #aaf;
  text-decoration: none;
}
section.unmaterialized {
  background: #f0f0f0;
  border-bottom: 1px solid #dedede;
  border-right: 1px solid #dedede;
  box-shadow: 0 0 0 0;
  padding: 24px 24px 48px 24px;
}
#controls {
  background: #f0f0f0;
  border-bottom: 1px solid #dedede;
  border-right: 1px solid #dedede;
  margin-bottom: 20px;
  padding: 18px 36px 5px 36px;
}
#comparetext {
  padding: 10px 0px 0px 0px;
}
.fixed {
  position: relative;
}
section.status {
  background: #f0f0f0;
  box-shadow: 0 0 0 0;
  padding: 24px 24px 48px 24px;
}
@media (min-width: 1230px) {
  #cards {
    padding-bottom: 100px;
    position: relative;
    width: 100%;
    z-index: 9;
  }
  section {
    z-index: 10;
  }
  #landing {
    width: 100%;
  }
  .fixed-container {
    left: calc(50% - 540px);
    position: absolute;
    top: 245px;
    z-index: 0;
  }
  .fixed {
    position: fixed !important;
    top: 25px;
  }
}
.warn {
  color: #f00;
}
.warn:before {
  content: ' ⚠ ';
}
.below-chart {
  margin: 10px auto;
  padding: 0px 30px 0px 25px;
  position: relative;
  width: 100%;
  z-index: 2;
}
.section {
  height: auto;
  max-height: 600px;
  overflow: hidden;
  position: relative;
  transition: max-height 0.3s ease-out;
}
.section.collapsed {
  max-height: 0;
}
.collapsible.fade::after {
  background: -webkit-linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: -moz-linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: -o-linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: -ms-linear-gradient(rgba(25,250,250,0) 0%, #f0f0f0 100%);
  bottom: 0;
  content: '';
  height: 40px;
  position: absolute;
  width: 100%;
}
.section.showsome {
  max-height: 100px;
}
.repo-link-holder {
  background: #eaeaea;
  height: 300px;
  overflow-y: scroll;
  padding: 10px;
}
.repo-link-table-body {
  background: #eaeaea;
}
th,
td {
  padding: 0;
}
cite.metric {
  color: #ccc;
  display: block;
  float: left;
  font-size: 12px;
  font-style: normal;
  height: 0;
  margin-left: 52px;
  text-align: left;
  width: 100%;
}
cite.metric a {
  color: #aaa;
  text-decoration: underline;
}
.graph-download {
  background: 0;
  color: #ccc;
  float: right;
  font-size: 0.7em;
  height: 5px !important;
  line-height: 30px;
  margin: -7px 7px 0 0 !important;
  padding: 3px !important;
}
.graph-download:hover {
  background: #eee;
  color: #000;
}
.error {
  justify-content: center;
  margin: auto;
  padding: 30px 0px 31px 20px;
  text-align: center;
}
.error:before {
  content: '\26A0';
  font-size: 3em;
  justify-content: center;
  margin: auto;
  padding: 50px 50px 50px 50px;
  text-align: center;
}
#optionheader {
  font-size: 1.1em;
  font-weigth: 600;
}
.marks {
  padding: 10px 0px 0px 24px !important;
}
.role-title > text {
  font-size: 20px !important;
  font-weight: normal !important;
}
.bubblechart {
  width: 100%;
}
.bubblechart * {
  overflow: visible !important;
}
.stackedbarchart * {
  margin-bottom: 30px;
  overflow: visible !important;
  width: 100%;
}
.tickchart * {
  overflow: visible !important;
  width: 100%;
}
.normalbar * {
  overflow: visible !important;
  width: 100%;
}
.bubblechart svg {
  width: 100%;
}
.mg-line-legend {
  display: none;
}
.legend {
  font-size: 14px;
  font-weight: bold;
  height: 0;
  left: 55px;
  margin: 0;
  opacity: 0.8;
  padding: 0;
  position: relative;
  top: 31px;
}
.mg-baselines {
  opacity: 0.5;
}
#collapse {
  padding: 10px 0px 15px 0px;
}
.linechart {
  padding: 0px 0px 0px 18px;
}
.loader {
  animation: spin 2s linear infinite;
  border: 16px solid #7d7d7d /* our red */;
  border-radius: 50%;
  border-top: 16px solid #ff3647 /* our gray */;
  height: 120px;
  line-height: 10;
  margin: 0px 0px 0px 270px;
  opacity: 0.5;
  position: absolute;
  text-align: center;
  transform: translateY(-50%);
  width: 100%;
  width: 120px;
}
.intro {
  animation: intro 2s;
}
@media print {
  body {
    zoom: 75%;
  }
  section {
    min-height: 10.5in;
    min-width: 800px;
    page-break-after: always;
  }
  section.unmaterialized {
    display: none;
  }
}
.hidden,
.hidden > *,
.hidden > small {
  display: none !important;
}
.spacing {
  height: 90px;
}
.invis,
.invis > *,
.invis > small {
  max-height: 116px !important;
  opacity: 0 !important;
  z-index: -1;
}
.invisDet,
.invisDet > *,
.invisDet > small {
  max-height: 191px !important;
  opacity: 0 !important;
  z-index: -1;
}
.shrunk {
  max-height: 0px !important;
}
.lines-of-code-table th,
.lines-of-code-table td {
  padding: 0.5rem;
}
.clickable-header {
  color: #3794de;
  cursor: pointer;
  text-decoration: underline;
}
.checkbox_select_anchor {
  background: #b22222;
  color: #fff;
  cursor: pointer;
  display: block;
  padding: 10px 5px 5px;
  position: relative;
}
.checkbox_select_anchor:after {
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #8b0000;
  content: '';
  height: 0;
  position: absolute;
  right: 10px;
  top: 15px;
  width: 0;
}
.expanded .checkbox_select_anchor:after {
  border-bottom: 10px solid #b22222;
  border-top: 0;
}
.checkbox_select_anchor:hover {
  background: #ff3030 !important;
}
.expanded .checkbox_select_anchor {
  background: #7c1818;
}
div.checkbox_select .select_input {
  cursor: pointer;
  width: 100%;
}
.checkbox_select_dropdown {
  background: #f5f5f5;
  display: none;
}
.checkbox_select_dropdown.show {
  display: block;
}
/* ... */

